# pFaces-AMYTISS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  amytiss-kernel.sln  build.bat  build.sh  pFaces-AMYTISS.sln  test.bat  test.sh
examples/arch20_artifact/: README.md
examples/arch20_artifact/BAS/: bas4d.cfg  bas7d.cfg  run_amytiss_bas.bat
examples/arch20_artifact/BAS1/: prob_and_safe_Set.m  run_amytiss_bas.bat  run_amytiss_bas.sh
examples/arch20_artifact/anaesthesia_safety/: anaesthesia.cfg  closedloop.m
examples/arch20_artifact/anaesthesia_safety/figs/: safe_set.fig
examples/arch20_artifact/integrators/: gen_dyn.m  int18.cfg  int2.cfg  int20.cfg  int3.cfg  int4.cfg  int5.cfg  int7.cfg  int8.cfg  int9.cfg  probabilities.m  run.sh  template.cfg
examples/arch20_artifact/roomtemp3/: closedloop.m  run_amytiss_roomtemp3.sh  sys_post.m
examples/arch20_artifact/traffic3/: closedloop.m  traffic3.cfg
examples/arch20_artifact/truck/: closedloop.m  run_amytiss_truck.bat  sys_post.h  sys_post.m  truck.cfg
examples/arch20_artifact/truck/MatCarAnim/: coordTrafoAngles.m  draw_chessboard.m  matCarAnim.m  newCarAnim.m  redrawCarAnim.m  sphere_cg.m  visualKsys.m
examples/arch20_artifact/vdp/: run_amytiss_vdp.bat  sys_post.h  vdp.cfg
examples/arch21_artifact/: README.md
examples/arch21_artifact/BAS/: closedloop.m  run_amytiss_bas.sh  sys_post.m
examples/arch21_artifact/anaesthesia_safety/: prob_and_safe_Set.m  run_amytiss_anaesthesia.bat  run_amytiss_anaesthesia.sh  sys_post.m
examples/arch21_artifact/anaesthesia_safety/figs/: safe_set_with_points.fig
examples/arch21_artifact/deepracer/: deepracer.cfg  plot_pdf.m  run_amytiss_deepracer.sh  sys_post.h
examples/arch21_artifact/integrators/: gen_dyn.m  int10.cfg  int17.cfg  int2.cfg  int4.cfg  int6.cfg  int8.cfg  probabilities.m  underdev_run.sh
examples/arch21_artifact/roomtemp3/: probabilities.m  roomtemp3.cfg  run_amytiss_roomtemp3.bat
examples/arch21_artifact/traffic3/: probabilities.m  run_amytiss_traffic3.bat  run_amytiss_traffic3.sh
examples/arch21_artifact/truck/: run_amytiss_truck.sh
examples/arch21_artifact/truck/MatCarAnim/: addpathMatCarAnim.m  any2str.m  axisRotation.m  colorspec2rgb.m  coordTrafo.m  createAnimWindow.m  (+4 more)
examples/arch21_artifact/vdp/: grep  run_amytiss_vdp.sh  sys_post.h  vdp.cfg
examples/cav20_re/: 10D_STCHY_SAFETY  11D_STCHY_SAFETY  12D_STCHY_SAFETY  13D_STCHY_SAFETY  14D_STCHY_SAFETY  2D_ROBOT_RAVOID  2D_ROBOT_RAVOID_OFA  2D_ROBOT_SAFETY  2D_ROBOT_SAFETY_OFA  2D_STCHY_SAFETY  3D_RTEMP_SAFETY  3D_RTEMP_SAFETY_OFA  3D_STCHY_SAFETY  3D_TRAFK_SAFETY  3D_TRAFK_SAFETY_OFA  4D_STCHY_SAFETY  5D_RTEMP_SAFETY  5D_RTEMP_SAFETY_OFA  5D_STCHY_SAFETY  5D_TRAFK_SAFETY  5D_TRAFK_SAFETY_OFA  6D_STCHY_SAFETY  7D_STCHY_SAFETY  8D_STCHY_SAFETY  9D_STCHY_SAFETY  genresults.sh  tmp.out
examples/ex_deepracer/: run_amytiss_deepracer.bat
examples/ex_ips/: closedloop.m  closedloop.m~  ips2d.cfg  ips4d.cfg  probabilities.m  run_amytiss_ips.bat  run_amytiss_ips.sh  sys_post_2d.m  sys_post_4d.m  sys_tester.m
examples/ex_rareEvent/: Brownian.cfg  propability.m  run.bat  run.sh
examples/ex_roomtemp3/: roomtemp3.cfg  run_amytiss_roomtemp3.bat  run_amytiss_roomtemp3.sh
examples/ex_roomtemp3/stochy/: main.cpp
examples/ex_roomtemp5/: Room_Temperature_Network_5.cfg  closedloop.m  probabilities.m  roomtemp5.cfg  run_amytiss_roomtemp5.bat  run_amytiss_roomtemp5.sh  sys_post.m
examples/ex_stochy/: clean_all.bat  run_all.bat  run_all.sh  stochy10.cfg  stochy11.cfg  stochy12.cfg  stochy13.cfg  stochy14.cfg  stochy2.cfg  stochy20.cfg  stochy2_run.txt  stochy3.cfg  stochy4.cfg  stochy5.cfg  stochy6.cfg  stochy7.cfg  stochy8.cfg  stochy9.cfg
examples/ex_stochy/stochy_code/: main.cpp
examples/ex_toy_benchmark/: clean_all.sh  run.txt  run_all.sh  toy2d_reachavoid.cfg  toy2d_safe.cfg
examples/ex_toy_reach/: closedloop.m  run_amytiss_toy2d.sh  sys_post.m  toy2d.cfg
examples/ex_toy_reach/figs/: V_Step_1.fig  V_Step_2.fig  V_Step_6.fig  V_Step_9.fig
examples/ex_toy_reachability/: closedloop.m  plot_mdp.m  toy2d.cfg
examples/ex_toy_reachability/figs/: V_Step_10.fig  V_Step_3.fig  V_Step_4.fig  V_Step_5.fig  V_Step_7.fig  V_Step_8.fig
examples/ex_toy_reachavoid/: closedloop.m  closedloop_linkedin.m  probabilities.m  run_amytiss_toy2d.bat  run_amytiss_toy2d.sh  toy2d.cfg
examples/ex_toy_reachavoid/figs/: reachavoid.fig
examples/ex_toy_safety/: closedloop.m  make_figs.m  probabilities.m  run_amytiss_toy2d.bat  run_amytiss_toy2d.sh  run_amytiss_toy2d_100t.bat  run_amytiss_toy2d_with_w.sh  run_amytiss_toy2d_wth_w.bat  sys_post.m  toy2d.cfg  toy2d_100t.cfg  toy2d_with_w.cfg  toy2d_with_w_mem.cfg
examples/ex_toy_safety/figs/: 100t_2d.fig  100t_time.fig  no_w.fig  with_w_max.fig  with_w_min.fig
examples/ex_traffic/: closedloop.m  probabilities.m  run_amytiss_traffic5.bat  run_amytiss_traffic5.sh  traffic5.cfg
examples/ex_traffic3/: run_amytiss_traffic3.bat  run_amytiss_traffic3.sh  sys_post.m  traffic3.cfg
examples/ex_traffic5/: closedloop.m  sys_post.m
examples/ex_vehicle/: run_amytiss_vehicle7d.bat  run_amytiss_vehicle7d.sh  simulate.m  sys_post.h  sys_post.m  vehicle7d.cfg
examples/ex_vehicle3/: plot_pdf.m  run_amytiss_vehicle3d.bat  run_amytiss_vehicle3d.sh  simulate.m  sys_post.h  sys_post.m  vehicle3d.cfg
examples/ex_vehicle7/: simulate.m  sys_post.h  sys_post.m  vehicle7d.cfg
interface/: ReadDynamicsSymbolic.m  amytissVList.m  amytissXUBag.m  amytissXUBag.m~  drawbar.m  exportPrismMDP.m  getControlAction.m  isInsideHyberRect.m  makeQuantizers.m  mdp_plot_transition.m  readCovarianceMatrix.m  scatterbar3.m
kernel/: Makefile  amytiss.cpp  amytiss.h  amytissPDFs.cpp  amytissPDFs.h  amytiss_kernel.vcxproj  amytiss_kernel.vcxproj.filters
kernel-pack/: amytiss.cpu.cl  amytiss.gpu.cl  amytiss.hwa.cl  amytiss.mem  amytiss_abstract.cl  amytiss_quantizer.cl  amytiss_synthesize.cl  amytiss_utils.cl  config.defaults  config.template
kernel/symboliccpp/: CMakeLists.txt
kernel/symboliccpp/src/: Makefile  functions.cpp  number.cpp
tools/: plot2DuniformDistribution.m
(+4 files in other folders)
